routes and conect to DB

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/soferdani/finel-projet-back#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
 }
