--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "nodemailer": "^6.4.14",
+    "sequelize": "^6.3.5",
+    "twilio": "^3.50.0"
   }
 }
