--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/soferdani/finel-projet-back#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "sequelize": "^6.3.5"
   }
 }
