--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
-    "sequelize": "^6.3.5",
     "nodemailer": "^6.4.14",
-    "twilio": "^3.50.0"
+    "sequelize": "^6.3.5"
   }
 }
