--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.14",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^2.3.0"
   }
 }
